--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <img src="./images/icon-quotes.svg" alt="icon">
       <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
       <div class="user">
+        <!-- Need to add ::before for the avatar! -->
         <h4>Kyle Burton</h4>
         <span>Founder & CEO, Huddle</span>
       </div>
