--- a/index.html
+++ b/index.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>FM | Fylo landing page with two column layout</title>
   <script src="https://kit.fontawesome.com/b4982d65ee.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
-  <header>
+  <header class="container">
     <h1 class="logo"><img src="./images/logo.svg" alt="Logo"></h1>
     <ul>
-      <li>Features</li>
-      <li>Team</li>
-      <li>Sign In</li>
+      <li><a href="#hero">Features</a></li>
+      <li><a href="#demo">Team</a></li>
+      <li><a href="#signup">Sign In</a></li>
     </ul>
   </header>
 
   <section id="hero">
-    <h2>All your files in one secure location, accessible anywhere</h2>
-    <p>Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.</p>
-    <form>
-      <input type="email" name="email" id="email" placeholder="Enter your email...">
-      <label for="email" hidden>Email</label>
-      <button>Get Started</button>
-    </form>
-    <div class="illustration">
-      <img src="./images/illustration-1.svg" alt="Illustration">
+    <div class="container">
+      <div class="left">
+        <h2>All your files in one secure location, accessible anywhere</h2>
+        <p>Fylo stores your most important files in one secure location. Access them wherever you need, share and
+          collaborate with friends, family, and co-workers.</p>
+        <form>
+          <input type="email" name="email" id="email" placeholder="Enter your email..." autocomplete="off">
+          <label for="email" hidden>Email</label>
+          <button>Get Started</button>
+        </form>
+      </div>
+      <div class="right">
+        <img src="./images/illustration-1.svg" alt="Illustration">
+      </div>
     </div>
   </section>
 
   <section id="demo">
     <!-- Need to add ::before curve-bg!  -->
     <h2>Stay productive, wherever you are</h2>
-    <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
-    <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments required!</p>
+    <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage
+      needs.</p>
+    <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments
+      required!</p>
     <button>
       <a href="http://google.com" target="_blank">See how Fylo works</a>
       <img src="./images/icon-arrow.svg" alt="icon">
     </button>
     <div class="card">
       <img src="./images/icon-quotes.svg" alt="icon">
-      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a
+        well-oiled collaboration machine.</p>
       <div class="user">
         <!-- Need to add ::before for the avatar! -->
         <h4>Kyle Burton</h4>
@@ -57,7 +67,8 @@
 
   <section id="signup">
     <h2>Get early access today</h2>
-    <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+    <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our
+      support team would be happy to help you.</p>
     <form>
       <input type="email" name="email" id="email" placeholder="email@example.com">
       <label for="email" hidden>Email</label>
@@ -99,8 +110,10 @@
 
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> | Coded by <a href="https://github.com/jacoblindev" target="_blank">Jacob Lin</a> 👊🏼2020
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> | Coded by
+      <a href="https://github.com/jacoblindev" target="_blank">Jacob Lin</a> 👊🏼2020
     </p>
   </footer>
 </body>
+
 </html>
