Fixed the curve bg effect!!

--- a/index.html
+++ b/index.html
@@ -39,29 +39,41 @@
     </div>
   </section>
 
+  <div class="bg-curve">
+    <picture>
+      <source media="(max-width: 799px)" srcset="./images/bg-curve-mobile.svg">
+      <source media="(min-width: 800px)" srcset="./images/bg-curve-desktop.svg">
+      <img src="./images/bg-curve-desktop.svg" alt="curve-bg">
+    </picture>
+  </div>
+
   <section id="demo">
-    <!-- Need to add ::before curve-bg!  -->
-    <h2>Stay productive, wherever you are</h2>
-    <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage
-      needs.</p>
-    <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email attachments
-      required!</p>
-    <button>
-      <a href="http://google.com" target="_blank">See how Fylo works</a>
-      <img src="./images/icon-arrow.svg" alt="icon">
-    </button>
-    <div class="card">
-      <img src="./images/icon-quotes.svg" alt="icon">
-      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a
-        well-oiled collaboration machine.</p>
-      <div class="user">
-        <!-- Need to add ::before for the avatar! -->
-        <h4>Kyle Burton</h4>
-        <span>Founder & CEO, Huddle</span>
+    <div class="container">
+      <div class="left">
+        <!-- Need to add ::before curve-bg!  -->
+        <h2>Stay productive, wherever you are</h2>
+        <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage
+          needs.</p>
+        <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
+          attachments
+          required!</p>
+        <button>
+          <a href="http://google.com" target="_blank">See how Fylo works</a>
+          <img src="./images/icon-arrow.svg" alt="icon">
+        </button>
+        <div class="card">
+          <img src="./images/icon-quotes.svg" alt="icon">
+          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
+          <span class="user">
+            <!-- Need to add ::before for the avatar! -->
+            <h4>Kyle Burton</h4>
+            <span>Founder & CEO, Huddle</span>
+          </span>
+        </div>
       </div>
-    </div>
-    <div class="illustration">
-      <img src="./images/illustration-2.svg" alt="Illustration">
+      <div class="right">
+        <img src="./images/illustration-2.svg" alt="Illustration">
+      </div>
     </div>
   </section>
 
