Demo Section done!!

--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
         </button>
         <div class="card">
           <img src="./images/icon-quotes.svg" alt="icon">
-          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
-          <span class="user">
-            <!-- Need to add ::before for the avatar! -->
-            <h4>Kyle Burton</h4>
-            <span>Founder & CEO, Huddle</span>
-          </span>
+          <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
+            become a well-oiled collaboration machine.</p>
+          <div class="user">
+            <img src="./images/avatar-testimonial.jpg" alt="profile">
+            <div>
+              <h3>Kyle Burton</h3>
+              <span>Founder & CEO, Huddle</span>
+            </div>
+          </div>
         </div>
       </div>
       <div class="right">
