--- a/index.html
+++ b/index.html
@@ -80,15 +80,21 @@
     </div>
   </section>
 
-  <section id="signup">
-    <h2>Get early access today</h2>
-    <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our
-      support team would be happy to help you.</p>
-    <form>
-      <input type="email" name="email" id="email" placeholder="email@example.com">
-      <label for="email" hidden>Email</label>
-      <button>Get Started For Free</button>
-    </form>
+  <section id="sign-up">
+    <div class="container">
+      <div class="left">
+        <h2>Get early access today</h2>
+        <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions,
+          our support team would be happy to help you.</p>
+      </div>
+      <div class="right">
+        <form>
+          <input type="email" name="email" id="email" placeholder="email@example.com">
+          <label for="email" hidden>Email</label>
+          <button>Get Started For Free</button>
+        </form>
+      </div>
+    </div>
   </section>
 
   <section id="contact">
