Change Logo color!!

--- a/index.html
+++ b/index.html
@@ -84,12 +84,11 @@
     <div class="container">
       <div class="left">
         <h2>Get early access today</h2>
-        <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions,
-          our support team would be happy to help you.</p>
+        <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
       </div>
       <div class="right">
         <form>
-          <input type="email" name="email" id="email" placeholder="email@example.com">
+          <input type="email" name="email" id="email" placeholder="email@example.com" autocomplete="off">
           <label for="email" hidden>Email</label>
           <button>Get Started For Free</button>
         </form>
