--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
     <div class="container">
       <div class="left">
         <h2>Get early access today</h2>
-        <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
+        <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions,
+          our support team would be happy to help you.</p>
       </div>
       <div class="right">
         <form>
@@ -97,34 +98,36 @@
   </section>
 
   <section id="contact">
-    <h1 class="logo"><img src="./images/whitelogo.svg" alt="logo"></h1>
-    <div class="links">
-      <ul id="info">
-        <li>
-          <img src="./images/icon-phone.svg" alt="icon">
-          <a>Phone: +1-543-123-4567</a>
-        </li>
-        <li>
-          <img src="./images/icon-email.svg" alt="icon">
-          <a>example@fylo.com</a>
-        </li>
-      </ul>
-      <ul class="pages">
-        <li><a>About Us</a></li>
-        <li><a>Jobs</a></li>
-        <li><a>Press</a></li>
-        <li><a>Blog</a></li>
-      </ul>
-      <ul class="pages">
-        <li><a>Contact Us</a></li>
-        <li><a>Terms</a></li>
-        <li><a>Privacy</a></li>
-      </ul>
-      <ul id="social">
-        <li><i class="fab fa-facebook-f"></i></li>
-        <li><i class="fab fa-twitter"></i></li>
-        <li><i class="fab fa-instagram"></i></li>
-      </ul>
+    <div class="container">
+      <h1 class="logo"><img src="./images/whitelogo.svg" alt="logo"></h1>
+      <div class="links">
+        <ul id="info">
+          <li>
+            <img src="./images/icon-phone.svg" alt="icon">
+            <a>Phone: +1-543-123-4567</a>
+          </li>
+          <li>
+            <img src="./images/icon-email.svg" alt="icon">
+            <a>example@fylo.com</a>
+          </li>
+        </ul>
+        <ul class="pages">
+          <li><a>About Us</a></li>
+          <li><a>Jobs</a></li>
+          <li><a>Press</a></li>
+          <li><a>Blog</a></li>
+        </ul>
+        <ul class="pages">
+          <li><a>Contact Us</a></li>
+          <li><a>Terms</a></li>
+          <li><a>Privacy</a></li>
+        </ul>
+        <ul id="social">
+          <li><i class="fab fa-facebook-f"></i></li>
+          <li><i class="fab fa-twitter"></i></li>
+          <li><i class="fab fa-instagram"></i></li>
+        </ul>
+      </div>
     </div>
   </section>
 
