--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 
 <body>
 
-  <header class="container">
-    <h1 class="logo"><img src="./images/logo.svg" alt="Logo"></h1>
-    <ul>
-      <li><a href="#hero">Features</a></li>
-      <li><a href="#demo">Team</a></li>
-      <li><a href="#signup">Sign In</a></li>
-    </ul>
+  <header>
+    <div class="container">
+      <h1 class="logo"><img src="./images/logo.svg" alt="Logo"></h1>
+      <ul>
+        <li><a href="#hero">Features</a></li>
+        <li><a href="#demo">Team</a></li>
+        <li><a href="#signup">Sign In</a></li>
+      </ul>
+    </div>
   </header>
 
   <section id="hero">
@@ -50,7 +52,6 @@
   <section id="demo">
     <div class="container">
       <div class="left">
-        <!-- Need to add ::before curve-bg!  -->
         <h2>Stay productive, wherever you are</h2>
         <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage
           needs.</p>
