--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="#hero">Features</a></li>
         <li><a href="#demo">Team</a></li>
-        <li><a href="#signup">Sign In</a></li>
+        <li><a href="#sign-up">Sign In</a></li>
       </ul>
     </div>
   </header>
@@ -30,7 +30,7 @@
         <p>Fylo stores your most important files in one secure location. Access them wherever you need, share and
           collaborate with friends, family, and co-workers.</p>
         <form>
-          <input type="email" name="email" id="email" placeholder="Enter your email..." autocomplete="off">
+          <input type="email" name="email" placeholder="Enter your email..." autocomplete="off">
           <label for="email" hidden>Email</label>
           <button>Get Started</button>
         </form>
@@ -90,7 +90,7 @@
       </div>
       <div class="right">
         <form>
-          <input type="email" name="email" id="email" placeholder="email@example.com" autocomplete="off">
+          <input type="email" name="email" placeholder="email@example.com" autocomplete="off">
           <label for="email" hidden>Email</label>
           <button>Get Started For Free</button>
         </form>
