--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>Fylo stores your most important files in one secure location. Access them wherever you need, share and
           collaborate with friends, family, and co-workers.</p>
         <form>
-          <input type="email" name="email" placeholder="Enter your email..." autocomplete="off">
+          <input type="email" id="email" placeholder="Enter your email..." autocomplete="off">
           <label for="email" hidden>Email</label>
           <button>Get Started</button>
         </form>
@@ -90,8 +90,8 @@
       </div>
       <div class="right">
         <form>
-          <input type="email" name="email" placeholder="email@example.com" autocomplete="off">
-          <label for="email" hidden>Email</label>
+          <input type="email" id="signUp" placeholder="email@example.com" autocomplete="off">
+          <label for="signUp" hidden>Email</label>
           <button>Get Started For Free</button>
         </form>
       </div>
