--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
         <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email
           attachments
           required!</p>
-        <button>
-          <a href="http://google.com" target="_blank">See how Fylo works</a>
-          <img src="./images/icon-arrow.svg" alt="icon">
-        </button>
+        <a href="http://google.com" target="_blank">See how Fylo works<img src="./images/icon-arrow.svg" alt="icon"></a>
         <div class="card">
           <img src="./images/icon-quotes.svg" alt="icon">
           <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
@@ -100,7 +97,7 @@
 
   <section id="contact">
     <div class="container">
-      <h1 class="logo"><img src="./images/whitelogo.svg" alt="logo"></h1>
+      <h1><img src="./images/whitelogo.svg" alt="logo"></h1>
       <div class="links">
         <ul id="info">
           <li>
