--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <div class="container">
-      <h1 class="logo"><img src="./images/logo.svg" alt="Logo"></h1>
+      <div class="logo"><img src="./images/logo.svg" alt="Logo"></div>
       <ul>
         <li><a href="#hero">Features</a></li>
         <li><a href="#demo">Team</a></li>
